. Updated readme.txt with requirements detail for MySQL server.
. Updated file_manager plugin translations to conform to new template.
. Updated comments in preparation for PHPDoc documentation.
. Renamed root dir text files to avoid name conflicts and accomodate Windows users.
. Renamed style.css into screen.css for more consistency with print.css in Normal layout.

0.9.4 - released 2008-09-29

+ Added function to allow plugin devs to add one or more javascript file to the backend html for their plugin. (issue 35)
+ Added auto-detected link to a plugin's documentation page. Checks for existence of documentation() function in plugin's controller (issue 33)
+ Added auto-detected link to a plugin's settings page. Checks for existence of settings() function in plugin's controller (issue 32)
+ Added Indonesian translation
+ Added "View this page" link in the Edit page screen
+ Added "Tag to use this snippet" in the Snippets tab
+ Added en-messages.php.template to i18n directory of core to assist translators
+ Added admin section option to choose default tab after login (issue 29)
+ Added display of latest plugin version in Frog admin section
+ Added option to admin screen: allow html in page title. (default: false) (issue 66)
+ Added favicon
+ Added option to Plugin::addController to allow for controller without displaying a tab
- Fixed lacking PNG support for IE6 (issue 64)
- Fixed bug allowing HTML code in page title, now filtered with Kses
- $values => $value in Page.childrenCount()
- Fixed security issue with DB username password in index.php
- Fixed incorrect return and if statement in DoPgsql.php
- Fixed accidental assignment bug in Framework.php (issue 43)
- Fixed bug where "Files" tab was accessible to users without roles. Now restricted to "administrator,developer,editor" (issue 42)
- Fixed bug where using permissions string as parameter to addController had no effect (issue 41)
- Fixed "s" echo for count in comment-each snippet of comment plugin